// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat-history log SDK event actions when a websdk/history/chat.comment action is received adds a new event group to the buffer 1`] = `
Object {
  "buffer": Array [
    Object {
      "author": "event_guy",
      "first": false,
      "messages": Array [
        12345,
      ],
      "type": "event",
    },
  ],
  "entries": Array [],
}
`;

exports[`chat-history log SDK event actions when a websdk/history/chat.memberjoin action is received adds a new event group to the buffer 1`] = `
Object {
  "buffer": Array [
    Object {
      "author": "event_guy",
      "first": false,
      "messages": Array [
        12345,
      ],
      "type": "event",
    },
  ],
  "entries": Array [],
}
`;

exports[`chat-history log SDK event actions when a websdk/history/chat.memberleave action is received adds a new event group to the buffer 1`] = `
Object {
  "buffer": Array [
    Object {
      "author": "event_guy",
      "first": false,
      "messages": Array [
        12345,
      ],
      "type": "event",
    },
  ],
  "entries": Array [],
}
`;

exports[`chat-history log SDK event actions when a websdk/history/chat.rating action is received adds a new event group to the buffer 1`] = `
Object {
  "buffer": Array [
    Object {
      "author": "event_guy",
      "first": false,
      "messages": Array [
        12345,
      ],
      "type": "event",
    },
  ],
  "entries": Array [],
}
`;

exports[`chat-history log SDK event actions when a websdk/history/chat.request.rating action is received adds a new event group to the buffer 1`] = `
Object {
  "buffer": Array [
    Object {
      "author": "event_guy",
      "first": false,
      "messages": Array [
        12345,
      ],
      "type": "event",
    },
  ],
  "entries": Array [],
}
`;

exports[`chat-history log SDK message actions when a websdk/history/chat.file action is received when the latest group was a message group from a different author adds a new message group to the buffer 1`] = `
Object {
  "buffer": Array [
    Object {
      "author": "other_guy",
      "messages": Array [
        10001,
      ],
      "type": "event",
    },
    Object {
      "author": "other_guy",
      "messages": Array [
        10002,
      ],
      "type": "message",
    },
    Object {
      "author": "message_guy",
      "first": false,
      "messages": Array [
        12345,
      ],
      "type": "message",
    },
  ],
  "entries": Array [],
}
`;

exports[`chat-history log SDK message actions when a websdk/history/chat.file action is received when the latest group was a message group from the same author appends the message timestamp to the latest group in the buffer 1`] = `
Object {
  "buffer": Array [
    Object {
      "author": "other_guy",
      "messages": Array [
        10001,
      ],
      "type": "event",
    },
    Object {
      "author": "other_guy",
      "messages": Array [
        10002,
      ],
      "type": "message",
    },
    Object {
      "author": "message_guy",
      "messages": Array [
        10003,
        12345,
      ],
      "type": "message",
    },
  ],
  "entries": Array [],
}
`;

exports[`chat-history log SDK message actions when a websdk/history/chat.file action is received when the latest group was an event group adds a new message group to the buffer 1`] = `
Object {
  "buffer": Array [
    Object {
      "author": "other_guy",
      "messages": Array [
        10001,
      ],
      "type": "event",
    },
    Object {
      "author": "other_guy",
      "messages": Array [
        10002,
      ],
      "type": "message",
    },
    Object {
      "author": "message_guy",
      "messages": Array [
        10003,
      ],
      "type": "message",
    },
    Object {
      "author": "some_guy",
      "messages": Array [
        10004,
      ],
      "type": "event",
    },
    Object {
      "author": "message_guy",
      "first": false,
      "messages": Array [
        12345,
      ],
      "type": "message",
    },
  ],
  "entries": Array [],
}
`;

exports[`chat-history log SDK message actions when a websdk/history/chat.msg action is received when the latest group was a message group from a different author adds a new message group to the buffer 1`] = `
Object {
  "buffer": Array [
    Object {
      "author": "other_guy",
      "messages": Array [
        10001,
      ],
      "type": "event",
    },
    Object {
      "author": "other_guy",
      "messages": Array [
        10002,
      ],
      "type": "message",
    },
    Object {
      "author": "message_guy",
      "first": false,
      "messages": Array [
        12345,
      ],
      "type": "message",
    },
  ],
  "entries": Array [],
}
`;

exports[`chat-history log SDK message actions when a websdk/history/chat.msg action is received when the latest group was a message group from the same author appends the message timestamp to the latest group in the buffer 1`] = `
Object {
  "buffer": Array [
    Object {
      "author": "other_guy",
      "messages": Array [
        10001,
      ],
      "type": "event",
    },
    Object {
      "author": "other_guy",
      "messages": Array [
        10002,
      ],
      "type": "message",
    },
    Object {
      "author": "message_guy",
      "messages": Array [
        10003,
        12345,
      ],
      "type": "message",
    },
  ],
  "entries": Array [],
}
`;

exports[`chat-history log SDK message actions when a websdk/history/chat.msg action is received when the latest group was an event group adds a new message group to the buffer 1`] = `
Object {
  "buffer": Array [
    Object {
      "author": "other_guy",
      "messages": Array [
        10001,
      ],
      "type": "event",
    },
    Object {
      "author": "other_guy",
      "messages": Array [
        10002,
      ],
      "type": "message",
    },
    Object {
      "author": "message_guy",
      "messages": Array [
        10003,
      ],
      "type": "message",
    },
    Object {
      "author": "some_guy",
      "messages": Array [
        10004,
      ],
      "type": "event",
    },
    Object {
      "author": "message_guy",
      "first": false,
      "messages": Array [
        12345,
      ],
      "type": "message",
    },
  ],
  "entries": Array [],
}
`;

exports[`chat-history log when a HISTORY_REQUEST_SUCCESS action is received appends the buffered entries to the entries array and clears the buffer array 1`] = `
Object {
  "buffer": Array [],
  "entries": Array [
    Object {
      "author": "other_guy",
      "messages": Array [
        10005,
        10006,
      ],
      "type": "message",
    },
    Object {
      "author": "message_guy",
      "messages": Array [
        10007,
      ],
      "type": "message",
    },
    Object {
      "author": "message_guy",
      "messages": Array [
        10008,
      ],
      "type": "event",
    },
    Object {
      "author": "other_guy",
      "messages": Array [
        10001,
      ],
      "type": "event",
    },
    Object {
      "author": "other_guy",
      "messages": Array [
        10002,
      ],
      "type": "message",
    },
    Object {
      "author": "message_guy",
      "messages": Array [
        10003,
      ],
      "type": "message",
    },
    Object {
      "author": "other_guy",
      "messages": Array [
        10004,
      ],
      "type": "event",
    },
  ],
}
`;
